--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Formsay</title>
+    <link rel="stylesheet" href="./styles/css/main.css">
 </head>
 
 <body>
-
+    <h1>welcome</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum ratione sint dolore dolor qui consequatur,
+        reiciendis quas vero maxime cum neque quibusdam? Corporis distinctio sed quam rerum repudiandae earum, porro
+        mollitia cum dignissimos ipsam itaque aperiam maiores beatae! Ipsum blanditiis inventore quo minima
+        dignissimos, laborum deserunt at totam debitis voluptas dolor quis accusantium voluptatibus magni veritatis
+        excepturi laudantium expedita temporibus?</p>
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa tempore temporibus rerum ducimus! Ad
+            voluptates a repellat beatae. Voluptas facere porro non soluta eveniet impedit quam deleniti voluptatum
+            suscipit sunt fugit quas a amet aliquid, reiciendis obcaecati, recusandae magnam ipsum.</p>
+    </div>
 </body>
 
 </html>
