--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <header class="header-global">
         <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--not-bottom headroom--pinned headroom--top">
             <div class="container">
-                <a class="navbar-brand mr-lg-5" href="../index.html">
-                    <img src="../assets/img/brand/white.png">
+                <a class="navbar-brand mr-lg-5" href="./index.html">
+                    Formsay
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
                     aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,7 +136,7 @@
     <div class="position-relative">
         <!-- shape Hero -->
         <section class="section section-lg section-shaped pb-250">
-            <div class="shape shape-style-1 shape-default">
+            <div class="shape shape-style-1 shape-default bg-gradient-dark">
                 <span></span>
                 <span></span>
                 <span></span>
