first section commit

--- a/src/index.html
+++ b/src/index.html
@@ -13,158 +13,79 @@
     <header class="header-global">
         <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--not-bottom headroom--pinned headroom--top">
             <div class="container">
-                <a class="navbar-brand mr-lg-5" href="./index.html">
-                    Formsay
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
-                    aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="./index.html">FORMSAY</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default"
+                    aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse" id="navbar_global">
+                <div class="collapse navbar-collapse" id="navbar-default">
                     <div class="navbar-collapse-header">
                         <div class="row">
                             <div class="col-6 collapse-brand">
-                                <a href="../index.html">
-                                    <img src="../assets/img/brand/blue.png">
+                                <a href="index.html">
+                                    <span class=" text-primary">Formsay </span>
                                 </a>
                             </div>
                             <div class="col-6 collapse-close">
-                                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global"
-                                    aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
+                                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default"
+                                    aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
                                     <span></span>
                                     <span></span>
                                 </button>
                             </div>
                         </div>
                     </div>
-                    <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                                <i class="ni ni-ui-04 d-lg-none"></i>
-                                <span class="nav-link-inner--text">Components</span>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-xl">
-                                <div class="dropdown-menu-inner">
-                                    <a href="../docs/getting-started/overview.html" class="media d-flex align-items-center">
-                                        <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
-                                            <i class="ni ni-spaceship"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h6 class="heading text-primary mb-md-1">Getting started</h6>
-                                            <p class="description d-none d-md-inline-block mb-0">Learn how to use Argon
-                                                compiling Scss, change brand colors and more.</p>
-                                        </div>
-                                    </a>
-                                    <a href="../docs/foundation/colors.html" class="media d-flex align-items-center">
-                                        <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                                            <i class="ni ni-palette"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h6 class="heading text-primary mb-md-1">Foundation</h6>
-                                            <p class="description d-none d-md-inline-block mb-0">Learn more about
-                                                colors, typography, icons and the grid system we used for Argon.</p>
-                                        </div>
-                                    </a>
-                                    <a href="../docs/components/alerts.html" class="media d-flex align-items-center">
-                                        <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                                            <i class="ni ni-ui-04"></i>
-                                        </div>
-                                        <div class="media-body ml-3">
-                                            <h5 class="heading text-warning mb-md-1">Components</h5>
-                                            <p class="description d-none d-md-inline-block mb-0">Browse our 50
-                                                beautiful handcrafted components offered in the Free version.</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                                <i class="ni ni-collection d-lg-none"></i>
-                                <span class="nav-link-inner--text">Examples</span>
-                            </a>
-                            <div class="dropdown-menu">
-                                <a href="../examples/landing.html" class="dropdown-item">Landing</a>
-                                <a href="../examples/profile.html" class="dropdown-item">Profile</a>
-                                <a href="../examples/login.html" class="dropdown-item">Login</a>
-                                <a href="../examples/register.html" class="dropdown-item">Register</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+
+                    <ul class="navbar-nav ml-md-auto">
                         <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank"
-                                data-toggle="tooltip" title="" data-original-title="Like us on Facebook">
-                                <i class="fa fa-facebook-square"></i>
-                                <span class="nav-link-inner--text d-lg-none">Facebook</span>
+                            <a class="nav-link nav-link-icon" href="#">
+                                <span class="nav-link-inner--text ">Feature</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial"
-                                target="_blank" data-toggle="tooltip" title="" data-original-title="Follow us on Instagram">
-                                <i class="fa fa-instagram"></i>
-                                <span class="nav-link-inner--text d-lg-none">Instagram</span>
+                            <a class="nav-link nav-link-icon" href="#">
+                                <span class="nav-link-inner--text ">Use Cases</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank"
-                                data-toggle="tooltip" title="" data-original-title="Follow us on Twitter">
-                                <i class="fa fa-twitter-square"></i>
-                                <span class="nav-link-inner--text d-lg-none">Twitter</span>
+                            <a class="nav-link nav-link-icon" href="#">
+                                <span class="nav-link-inner--text">Pricing</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial/argon-design-system"
-                                target="_blank" data-toggle="tooltip" title="" data-original-title="Star us on Github">
-                                <i class="fa fa-github"></i>
-                                <span class="nav-link-inner--text d-lg-none">Github</span>
-                            </a>
-                        </li>
-                        <li class="nav-item d-none d-lg-block ml-lg-4">
-                            <a href="https://www.creative-tim.com/product/argon-design-system" target="_blank" class="btn btn-neutral btn-icon">
-                                <span class="btn-inner--icon">
-                                    <i class="fa fa-cloud-download mr-2"></i>
-                                </span>
-                                <span class="nav-link-inner--text">Download</span>
+                            <button class=" btn btn-outline-secondary btn-sm nav-link">Sign Up</button>
+
                             </a>
                         </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
     </header>
     <div class="position-relative">
         <!-- shape Hero -->
-        <section class="section section-lg section-shaped pb-250">
-            <div class="shape shape-style-1 shape-default bg-gradient-dark">
+        <section class="section section-lg section-shaped pb-250 bg-gradient-warning">
+            <div class="shape shape-style-1 shape-primary ">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+
             </div>
             <div class="container py-lg-md d-flex">
                 <div class="col px-0">
                     <div class="row">
-                        <div class="col-lg-6">
-                            <h1 class="display-3  text-white">A beautiful Design System
-                                <span>completed with examples</span>
-                            </h1>
-                            <p class="lead  text-white">The design system comes with four pre-built pages to help you
-                                get started faster. You can change the text and images and you're good to go.</p>
-                            <div class="btn-wrapper">
-                                <a href="../docs/components/alerts.html" class="btn btn-info btn-icon mb-3 mb-sm-0">
-                                    <span class="btn-inner--icon"><i class="fa fa-code"></i></span>
-                                    <span class="btn-inner--text">Components</span>
-                                </a>
-                                <a href="https://www.creative-tim.com/product/argon-design-system" class="btn btn-white btn-icon mb-3 mb-sm-0">
-                                    <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
-                                    <span class="btn-inner--text">Download HTML</span>
-                                </a>
+                        <div class="col-lg-5">
+                            <h1 class=" text-white display-5">Create forms for every need</h1>
+                            <p class="text-white">It is easy to create and share forms with anyone</p>
+                            <div class="form-inline input-group ">
+                                <input class=" form-control form-control-sm" type="email" placeholder="Enter Your Email">
+                                <div class="input-group-append"><button class="btn btn-secondary btn-sm text-capitalize"
+                                        type="button">Try it for free</button>
+                                </div>
                             </div>
                         </div>
                     </div>
