--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,9 @@
             </div>
         </nav>
     </header>
-    <div class="position-relative">
+    <main class="position-relative">
         <!-- shape Hero -->
-        <section class="section section-lg section-shaped pb-250 bg-gradient-warning">
+        <section class="section section-lg section-shaped pb-250 ">
             <div class="shape shape-style-1 shape-primary ">
                 <span></span>
                 <span></span>
@@ -79,7 +79,7 @@
                 <div class="col px-0">
                     <div class="row">
                         <div class="col-lg-5">
-                            <h1 class=" text-white display-5">Create forms for every need</h1>
+                            <h1 class=" text-white display-5">Create forms <br> for every need</h1>
                             <p class="text-white">It is easy to create and share forms with anyone</p>
                             <div class="form-inline input-group ">
                                 <input class=" form-control form-control-sm" type="email" placeholder="Enter Your Email">
@@ -94,15 +94,19 @@
             <!-- SVG separator -->
             <div class="separator separator-bottom separator-skew">
                 <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+                    <polygon class="fill-grey" points="2560 0 2560 100 0 100"></polygon>
                 </svg>
             </div>
         </section>
-        <script src="./scripts/vendor/jquery/jquery.min.js"></script>
-        <script src="./scripts/vendor/bootstrap/bootstrap.bundle.js"></script>
-        <script src="./scripts/vendor/headroom/headroom.min.js"></script>
-        <script src="./scripts/argon.min.js"></script>
-        <script src="./scripts/main.js"></script>
+    </main>
+    <section class=" section section-light section-lg section-shaped">
+
+    </section>
+    <script src="./scripts/vendor/jquery/jquery.min.js"></script>
+    <script src="./scripts/vendor/bootstrap/bootstrap.bundle.js"></script>
+    <script src="./scripts/vendor/headroom/headroom.min.js"></script>
+    <script src="./scripts/argon.min.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
