--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     </header>
     <main class="position-relative">
         <!-- shape Hero -->
-        <section class="section section-lg section-shaped pb-250 ">
+        <section class="section section-col section-lg section-shaped pb-250 ">
             <div class="shape shape-style-1 shape-primary ">
                 <span></span>
                 <span></span>
@@ -94,13 +94,72 @@
             <!-- SVG separator -->
             <div class="separator separator-bottom separator-skew">
                 <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-                    <polygon class="fill-grey" points="2560 0 2560 100 0 100"></polygon>
+                    <polygon class=" fill-neutral" points="2560 0 2560 100 0 100"></polygon>
                 </svg>
             </div>
         </section>
     </main>
+    <!-- Features section -->
     <section class=" section section-light section-lg section-shaped">
-
+        <h1 class=" display-3 text-center mt--50 my-text">Features</h1>
+        <div class=" container">
+            <div class="nav-wrapper">
+                <ul class="nav nav-pills nav-fill flex-column flex-md-row" id="tabs-icons-text" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link mb-sm-3 mb-md-0 active" id="tabs-icons-text-1-tab" data-toggle="tab" href="#tabs-icons-text-1"
+                            role="tab" aria-controls="tabs-icons-text-1" aria-selected="true">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mb-sm-3 mb-md-0" id="tabs-icons-text-2-tab" data-toggle="tab" href="#tabs-icons-text-2"
+                            role="tab" aria-controls="tabs-icons-text-2" aria-selected="false">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mb-sm-3 mb-md-0" id="tabs-icons-text-3-tab" data-toggle="tab" href="#tabs-icons-text-3"
+                            role="tab" aria-controls="tabs-icons-text-3" aria-selected="false">Messages</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mb-sm-3 mb-md-0" id="tabs-icons-text-4-tab" data-toggle="tab" href="#tabs-icons-text-4"
+                            role="tab" aria-controls="tabs-icons-text-4" aria-selected="false">Messages</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card shadow">
+                <div class="card-body">
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel" aria-labelledby="tabs-icons-text-1-tab">
+                            <p class="description">Raw denim you probably haven't heard of them jean shorts Austin.
+                                Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor,
+                                williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
+                                synth.</p>
+                            <p class="description">Raw denim you probably haven't heard of them jean shorts Austin.
+                                Nesciunt tofu stumptown aliqua, retro synth master cleanse.</p>
+                        </div>
+                        <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel" aria-labelledby="tabs-icons-text-2-tab">
+                            <p class="description">Cosby sweater eu banh mi, qui irure terry richardson ex squid.
+                                Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel,
+                                butcher voluptate nisi qui.</p>
+                        </div>
+                        <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel" aria-labelledby="tabs-icons-text-3-tab">
+                            <p class="description">Raw denim you probably haven't heard of them jean shorts Austin.
+                                Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor,
+                                williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
+                                synth.</p>
+                        </div>
+                        <div class="tab-pane fade" id="tabs-icons-text-4" role="tabpanel" aria-labelledby="tabs-icons-text-4-tab">
+                            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+                                minus veritatis ut pariatur esse, ipsum quibusdam nobis eligendi nulla nisi voluptate
+                                odit assumenda sit quis voluptatibus, expedita nihil beatae quia.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- SVG separator -->
+        <div class="separator separator-bottom separator-skew">
+            <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <polygon class="fill-secondary" points="2560 0 2560 100 0 100"></polygon>
+            </svg>
+        </div>
     </section>
     <script src="./scripts/vendor/jquery/jquery.min.js"></script>
     <script src="./scripts/vendor/bootstrap/bootstrap.bundle.js"></script>
